[package]
name = "bagel_bomber"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
crossbeam-channel = "0.5.13"
rand = "0.8.5"
lazy_static = "1.5.0"
tungstenite = "0.26.0"
tiny_http = "0.12.0"

[dev-dependencies]
drone_tester = { git = "https://github.com/daw-dev/drone-tester.git" }

[features]
gui = []
default = ["gui"]

[[example]]
name = "ping"
path = "examples/ping.rs"
